force-app/main/default/objects/Agency_User__c/Agency_User__c.object-meta.xml
<CustomObject>
    <label>Agency User</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Agency User ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agency Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>