force-app/main/default/objects/Agency_User__c/fields/Agency_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Agency_Phone_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Agency Phone Number</label>
    <type>Phone</type>
</CustomField>