force-app/main/default/objects/Agency_User__c/fields/Agency_Type__c.field-meta.xml
<CustomField>
    <fullName>Agency_Type__c</fullName>
    <formula>/*CASE( Placement__r.RecordType.Name, 
      &apos;Collection Agency&apos;, &apos;Collection Agency&apos;, 
      &apos;Hybrid Agency&apos;, &apos;Hybrid Agency&apos;,
      &apos;Legal Agency&apos;, &apos;Legal Agency&apos;,
      null)*/


TEXT(Placement__r.Agency_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is used for Distressed Account</inlineHelpText>
    <label>Agency Type</label>
    <type>Text</type>
</CustomField>