force-app/main/default/objects/Agency_User__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>commission rate fetch from corresponding placement agency</description>
    <formula>Placement__r.Commission_Rate__c</formula>
    <inlineHelpText>commission rate fetch from corresponding placement agency</inlineHelpText>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>