force-app/main/default/objects/Agency_User__c/fields/Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Email_Address__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>User email address</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>User email address</inlineHelpText>
    <label>Email Address</label>
    <required>true</required>
    <type>Email</type>
    <unique>true</unique>
</CustomField>