force-app/main/default/objects/Agency_User__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Agency Users</relationshipLabel>
    <relationshipName>Agency_Users</relationshipName>
    <type>Lookup</type>
</CustomField>