force-app/main/default/objects/Agency_User__c/fields/Placement_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Placement_Identifier__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Placement Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>