force-app/main/default/objects/Agency_User__c/recordTypes/Agency_Contact.recordType-meta.xml
<RecordType>
    <fullName>Agency_Contact</fullName>
    <active>true</active>
    <description>Agency Contact</description>
    <label>Agency Contact</label>
</RecordType>