force-app/main/default/objects/Agency_User__c/recordTypes/Agnecy_Contact_Portal_User.recordType-meta.xml
<RecordType>
    <fullName>Agnecy_Contact_Portal_User</fullName>
    <active>true</active>
    <description>Agnecy Contact Portal User</description>
    <label>Agnecy Contact Portal User</label>
</RecordType>