force-app/main/default/objects/Agency_User__c/recordTypes/Portal_User.recordType-meta.xml
<RecordType>
    <fullName>Portal_User</fullName>
    <active>true</active>
    <description>Portal User</description>
    <label>Portal User</label>
</RecordType>