force-app/main/default/objects/Agency_User__c/listViews/All_AMS_Portal_Users.listView-meta.xml
<ListView>
    <fullName>All_AMS_Portal_Users</fullName>
    <columns>NAME</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Agency_Name__c</columns>
    <columns>Role__c</columns>
    <columns>Email_Address__c</columns>
    <columns>Placement__c</columns>
    <columns>Last_Modified_By__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Agency Portal Users</label>
</ListView>